--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,4 @@
 <h2>Changes</h2>
 <ul>
-	<li>Change slope collision to be configured to have smoother inclines. (Like Carpentry Blocks)</li>
-	<li>Add a Debug utility for viewing blocks collision boxes while holding shift (Disabled by default)</li>
+	<li>Make the Ultimate Fist enchantable for even more Overpowered-ness.</li>
 </ul>
