--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
 <h2>Changes</h2>
 <ul>
-	<li>Make the Ultimate Fist enchantable for even more Overpowered-ness.</li>
+	<li>Made the Ultimate Fist more configurable so you can make more or less overpowered how you see fit.</li>
 </ul>
