--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,5 @@
 <h2>Changes</h2>
 <ul>
-	<li>Made the Ultimate Fist more configurable so you can make more or less overpowered how you see fit.</li>
+	<li>Added in the <a href="https://sites.google.com/site/grimsmods/group-mods/ljdp-s-mods#TOC-Extruder-1.2.5-">Extruder</a> mod. A mod I updated a long time ago.</li>
+	<li>This should work exactly the same with some small bugfixes.</li>
 </ul>
