--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,7 @@
 <h2>Changes</h2>
 <ul>
-	<li>Added in the <a href="https://sites.google.com/site/grimsmods/group-mods/ljdp-s-mods#TOC-Extruder-1.2.5-">Extruder</a> mod. A mod I updated a long time ago.</li>
-	<li>This should work exactly the same with some small bugfixes.</li>
+	<li>Added in the Fan block. A mod I updated a long time ago.</li>
+	<li>This should work exactly the same with some small changes like textures for each mode.</li>
+	<li>This is similar to the Gravity Science blocks but more configurable.</li>
 </ul>
+<img src="http://i.imgur.com/aeHbIO6.png">
