--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,5 @@
 <h2>Changes</h2>
 <ul>
-	<li>Added in the Fan block. A mod I updated a long time ago.</li>
-	<li>This should work exactly the same with some small changes like textures for each mode.</li>
-	<li>This is similar to the Gravity Science blocks but more configurable.</li>
+	<li>Add in Flat Item Frames which can be placed on all sides of blocks.</li>
 </ul>
-<img src="http://i.imgur.com/aeHbIO6.png">
+<img src="http://i.imgur.com/Bb5M90K.png">
