--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,11 @@
 <h2>Changes</h2>
 <ul>
-	<li>Add in Flat Item Frames which can be placed on all sides of blocks.</li>
+	<li>Add in ability to flip block models in flat item frames that are on the floor or ceiling</li>
+	<li>This is controlled by a config option and is off by default</li>
 </ul>
-<img src="http://i.imgur.com/Bb5M90K.png">
+<h2>Bug Fixes</h2>
+<ul>
+	<li>Fixed the Milking Event for Better Buckets that was causing issues when interacting with certain entities.</li>
+	<li>This is why the rotation was weird with Flat Item Frames and vanilla item frames.</li>
+</ul>
+<img src="http://i.imgur.com/TNmK0Lv.png">
