--- a/changelog.html
+++ b/changelog.html
@@ -5,6 +5,7 @@
 </ul>
 <h2>Bug Fixes</h2>
 <ul>
+	<li>Small change to Flat Item Frames that makes it so it renders all 3D models flipped if flipBlocks is true.</li>
 	<li>Fixed the Milking Event for Better Buckets that was causing issues when interacting with certain entities.</li>
 	<li>This is why the rotation was weird with Flat Item Frames and vanilla item frames.</li>
 </ul>
