--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,8 @@
 <h2>Changes</h2>
 <ul>
-	<li>Add in ability to flip block models in flat item frames that are on the floor or ceiling</li>
-	<li>This is controlled by a config option and is off by default</li>
+	<li>Add in boomerangs</li>
+	<li>These can be thrown and will return to you after they reach their max distance</li>
+	<li>These can also activate buttons and levers by default as well as do damage to mobs</li>
+	<li>Boomerangs can also pick up items as seen below</li>
 </ul>
-<h2>Bug Fixes</h2>
-<ul>
-	<li>Small change to Flat Item Frames that makes it so it renders all 3D models flipped if flipBlocks is true.</li>
-	<li>Fixed the Milking Event for Better Buckets that was causing issues when interacting with certain entities.</li>
-	<li>This is why the rotation was weird with Flat Item Frames and vanilla item frames.</li>
-</ul>
-<img src="http://i.imgur.com/TNmK0Lv.png">
+<img src="http://i.imgur.com/Rp0Uf6v.png">
