--- a/changelog.html
+++ b/changelog.html
@@ -1,8 +1,13 @@
 <h2>Changes</h2>
 <ul>
-	<li>Add in boomerangs</li>
-	<li>These can be thrown and will return to you after they reach their max distance</li>
-	<li>These can also activate buttons and levers by default as well as do damage to mobs</li>
-	<li>Boomerangs can also pick up items as seen below</li>
+	<li>Cage blocks from decor can now accept a pokeball as input and will render the mob currently caught inside the cage.</li>
+	<li>Change Pokeball to retrieve entity names better.</li>
+	<li>The current method will still work but it will change when you throw a new pokeball.</li>
+	<li>Add in black diamond and steel multitools.</li>
 </ul>
-<img src="http://i.imgur.com/Rp0Uf6v.png">
+<h2>Bug Fixes</h2>
+<ul>
+	<li>Fix blocks not dropping for hedge blocks</li>
+	<li>Fix buckets not returning when used in milk crafting</li>
+</ul>
+<img src="http://i.imgur.com/XtDuRV3.png">
