--- a/changelog.html
+++ b/changelog.html
@@ -1,13 +1,8 @@
-<h2>Changes</h2>
-<ul>
-	<li>Cage blocks from decor can now accept a pokeball as input and will render the mob currently caught inside the cage.</li>
-	<li>Change Pokeball to retrieve entity names better.</li>
-	<li>The current method will still work but it will change when you throw a new pokeball.</li>
-	<li>Add in black diamond and steel multitools.</li>
-</ul>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix blocks not dropping for hedge blocks</li>
-	<li>Fix buckets not returning when used in milk crafting</li>
+	<li>If a mod registered milk without a texture then milk buckets would use the missing texture</li>
+	<li>Cages didn't drop contents</li>
+	<li>Shift clicking into Cages would crash</li>
+	<li>Bedrock would still generate in void worlds</li>
+	<li>Floating Islands infinite loop if there was just air down to bedrock</li>
 </ul>
-<img src="http://i.imgur.com/XtDuRV3.png">
