--- a/changelog.html
+++ b/changelog.html
@@ -1,8 +1,9 @@
-<h2>Bug Fixes</h2>
+<h2>Changes</h2>
 <ul>
-	<li>If a mod registered milk without a texture then milk buckets would use the missing texture</li>
-	<li>Cages didn't drop contents</li>
-	<li>Shift clicking into Cages would crash</li>
-	<li>Bedrock would still generate in void worlds</li>
-	<li>Floating Islands infinite loop if there was just air down to bedrock</li>
+	<li>Allow workbench upgrades to use either a blacklist or whitelist</li>
+	<li>These work exactly as you would think so blacklist allows all items but those listed</li>
+	<li>Whitelist is only the items listed work</li>
+	<li>You can add new ones in the mod options and it supports meta values as shown below</li>
+	<li>If no meta value is specified then it defaults to 0</li>
 </ul>
+<img src="http://i.imgur.com/AHXJGnC.png">
