--- a/changelog.html
+++ b/changelog.html
@@ -1,9 +1,9 @@
 <h2>Changes</h2>
 <ul>
-	<li>Allow workbench upgrades to use either a blacklist or whitelist</li>
-	<li>These work exactly as you would think so blacklist allows all items but those listed</li>
-	<li>Whitelist is only the items listed work</li>
-	<li>You can add new ones in the mod options and it supports meta values as shown below</li>
-	<li>If no meta value is specified then it defaults to 0</li>
+	<li>Adds a config option so that if an item is blacklisted or not on the whitelist it is crafted and returns the regular amount</li>
 </ul>
-<img src="http://i.imgur.com/AHXJGnC.png">
+<h2>Bug Fixes</h2>
+<ul>
+	<li>Fix an issue for wrong amounts being displayed</li>
+	<li>This also fixes an issue with a blacklisted recipe returning the wrong output</li>
+</ul>
