--- a/changelog.html
+++ b/changelog.html
@@ -1,9 +1,5 @@
-<h2>Changes</h2>
-<ul>
-	<li>Adds a config option so that if an item is blacklisted or not on the whitelist it is crafted and returns the regular amount</li>
-</ul>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix an issue for wrong amounts being displayed</li>
-	<li>This also fixes an issue with a blacklisted recipe returning the wrong output</li>
+	<li>Fix a crash that would sometimes occur with RayGuns</li>
+	<li>Adjust Ice Pixie size to be accurate</li>
 </ul>
