Add mcmod and bump version to 3.4.14.33

--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,9 @@
+<h2>Changes</h2>
+<ul>
+	<li>Includes mcmod.info now</li>
+</ul>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix a crash that would sometimes occur with RayGuns</li>
-	<li>Adjust Ice Pixie size to be accurate</li>
+	<li>Fix a crash that could occur with projectiles hitting entities</li>
+	<li>This was because they were thought of as arrows</li>
 </ul>
