--- a/changelog.html
+++ b/changelog.html
@@ -1,9 +1,11 @@
 <h2>Changes</h2>
 <ul>
-	<li>Includes mcmod.info now</li>
+	<li>Add in portable workbench upgrades</li>
+	<li>Add in JEI support for portable workbenches</li>
+	<li>Add in configurable place height for glowstone seeds</li>
+	<li>Add in sound effects for Spikes</li>
 </ul>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix a crash that could occur with projectiles hitting entities</li>
-	<li>This was because they were thought of as arrows</li>
+	<li>Fix a crash that could occur sometimes when generating chunks</li>
 </ul>
