--- a/changelog.html
+++ b/changelog.html
@@ -1,11 +1,4 @@
 <h2>Changes</h2>
 <ul>
-	<li>Add in portable workbench upgrades</li>
-	<li>Add in JEI support for portable workbenches</li>
-	<li>Add in configurable place height for glowstone seeds</li>
-	<li>Add in sound effects for Spikes</li>
-</ul>
-<h2>Bug Fixes</h2>
-<ul>
-	<li>Fix a crash that could occur sometimes when generating chunks</li>
+	<li>Add in Chinese translations by <a href="https://mods.curse.com/members/ChineseHerbalTea">ChineseHerbalTea</a></li>
 </ul>
