--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,6 @@
 <h2>Changes</h2>
 <ul>
-	<li>Add in Chinese translations by <a href="https://mods.curse.com/members/ChineseHerbalTea">ChineseHerbalTea</a></li>
+	<li>Add in more config options for World Gen</li>
+	<li>Change mobs and desert wells to use loot tables</li>
+	<li>Add support for <a href="https://minecraft.curseforge.com/projects/just-enough-resources-jer">Just Enough Resources</a></li>
 </ul>
