--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,11 @@
+<h2>Bug Fixes</h2>
+<ul>
+	<li>Fix some armor values being wrong</li>
+	<li>Fix Mo' People spawns</li>
+	<li>Fix Treasure Mobs face to be correct</li>
+	<li>Fix changing wand spared ores to actually update without a restart</li>
+</ul>
 <h2>Changes</h2>
 <ul>
-	<li>Add in more config options for World Gen</li>
-	<li>Change mobs and desert wells to use loot tables</li>
-	<li>Add support for <a href="https://minecraft.curseforge.com/projects/just-enough-resources-jer">Just Enough Resources</a></li>
+	<li>Secret WIP, should be out soon.</li>
 </ul>
