--- a/changelog.html
+++ b/changelog.html
@@ -1,11 +1,18 @@
-<h2>Bug Fixes</h2>
-<ul>
-	<li>Fix some armor values being wrong</li>
-	<li>Fix Mo' People spawns</li>
-	<li>Fix Treasure Mobs face to be correct</li>
-	<li>Fix changing wand spared ores to actually update without a restart</li>
-</ul>
+<h1>Version: 3.4.17.50</h1>
+<br>
 <h2>Changes</h2>
 <ul>
-	<li>Secret WIP, should be out soon.</li>
+	<li>Added in Specific Sensors and GPS</li>
+	<li>These allow you to sense all types of entities in the world as well as define specific cases like only detecting a player with username Grim3212.</li>
+	<li>Added in more Modern Furnace and Refinery recipes</li>
+	<li>Added in a config option for how much Uranium hurts</li>
 </ul>
+<h2>Bug Fixes</h2>
+<ul>
+	<li>Fix knife durability not working</li>
+	<li>Fix a compatibility problem with Refined Storage</li>
+</ul>
+<p>All information on Specific Sensors can be found in the Manual under Industry and Sensors. They are very customizeable.</p>
+<img src="http://i.imgur.com/d6KJVk7.png">
+<img src="http://i.imgur.com/YrAtlJz.png">
+<img src="http://i.imgur.com/xXXdBTN.png">
