--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Version: 3.4.17.50</h1>
+<h1>Version: 3.4.17.51</h1>
 <br>
 <h2>Changes</h2>
 <ul>
@@ -11,6 +11,7 @@
 <ul>
 	<li>Fix knife durability not working</li>
 	<li>Fix a compatibility problem with Refined Storage</li>
+	<li>Fix machines not dropping experience</li>
 </ul>
 <p>All information on Specific Sensors can be found in the Manual under Industry and Sensors. They are very customizeable.</p>
 <img src="http://i.imgur.com/d6KJVk7.png">
