--- a/changelog.html
+++ b/changelog.html
@@ -1,19 +1,6 @@
-<h1>Version: 3.4.17.51</h1>
+<h1>Version: 3.4.17.52</h1>
 <br>
-<h2>Changes</h2>
-<ul>
-	<li>Added in Specific Sensors and GPS</li>
-	<li>These allow you to sense all types of entities in the world as well as define specific cases like only detecting a player with username Grim3212.</li>
-	<li>Added in more Modern Furnace and Refinery recipes</li>
-	<li>Added in a config option for how much Uranium hurts</li>
-</ul>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix knife durability not working</li>
-	<li>Fix a compatibility problem with Refined Storage</li>
-	<li>Fix machines not dropping experience</li>
+	<li>Fix Infinite Lava loop</li>
 </ul>
-<p>All information on Specific Sensors can be found in the Manual under Industry and Sensors. They are very customizeable.</p>
-<img src="http://i.imgur.com/d6KJVk7.png">
-<img src="http://i.imgur.com/YrAtlJz.png">
-<img src="http://i.imgur.com/xXXdBTN.png">
