Initial update to 1.11... Core, Util, and World should be good. Now for the rest.

--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
-<h1>Version: 3.4.17.52</h1>
+<h1>Version: 4.0.0.0</h1>
 <br>
-<h2>Bug Fixes</h2>
+<h2>Changes</h2>
 <ul>
-	<li>Fix Infinite Lava loop</li>
+	<li>Update to 1.11</li>
 </ul>
