--- a/changelog.html
+++ b/changelog.html
@@ -6,8 +6,7 @@
 	<li>Minecraft 1.11</li>
 	<li>Minecraft Forge 13.19.1.2189</li>
 	<li>(Optional) JEI 4.1.0.204</li>
-	<li>(Optional) JER 0.6.1.100 [Any 1.11 versions
-			should work but this is what I built with]</li>
+	<li>(Optional) JER 0.6.1.100</li>
 </ul>
 
 <p>
@@ -17,7 +16,14 @@
 	There is also some things that are still being worked on and will be added before the full release.
 </p>
 
-<h2>Changes</h2>
+<h2>Changes in 4.0.0.0 Alpha 1</h2>
+<ul>
+	<li>Fix Decor Door page</li>
+	<li>Fix Frames and Wallpaper using a hand that was null</li>
+	<li>Fix Machines loading null ItemStacks</li>
+</ul>
+
+<h2>Changes in 4.0.0.0 Alpha</h2>
 <ul>
 	<li>Add in new Decor Door that can be colorized</li>
 	<li>Add in colorizer light that works the same as the default
