Fix a crash that would sometimes occur with entity spawning

--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
-<h1>Version: 3.4.17.52</h1>
+<h1>Version: 3.4.17.53</h1>
 <br>
 <h2>Bug Fixes</h2>
 <ul>
-	<li>Fix Infinite Lava loop</li>
+	<li>Fix a crash that would sometimes occur with entity spawning</li>
 </ul>
