Fix Pokeball's from not correctly setting their ItemStack

--- a/changelog.html
+++ b/changelog.html
@@ -16,6 +16,11 @@
 	There is also some things that are still being worked on and will be added before the full release.
 </p>
 
+<h2>Changes in 4.0.0.0 Alpha 2</h2>
+<ul>
+	<li>Fix Pokeballs not working at all</li>
+</ul>
+
 <h2>Changes in 4.0.0.0 Alpha 1</h2>
 <ul>
 	<li>Fix Decor Door page</li>
