--- a/changelog.html
+++ b/changelog.html
@@ -1,13 +1,18 @@
-<h1>Version: 4.0.0.0 Alpha</h1>
-<h2 style="color: #0000FF">Update to 1.11</h2>
+<h1>Version: 4.0.0.0 Beta</h1>
+<h2 style="color: #0000FF">Update to 1.11.2</h2>
 
 <h3>Requirements</h3>
 <ul>
-	<li>Minecraft 1.11</li>
-	<li>Minecraft Forge 13.19.1.2189</li>
-	<li>(Optional) JEI 4.1.0.204</li>
-	<li>(Optional) JER 0.6.1.100</li>
+	<li>Minecraft 1.11.2</li>
+	<li>Minecraft Forge 13.20.0.2201</li>
+	<li>(Optional) JEI 4.2.2.215</li>
+	<li>(Optional) JER 0.6.2.104</li>
 </ul>
+
+<p>
+	Getting close to an official release. I will need to start writing up a complete changelog as well as 
+	add the new information to the instruction manual.
+</p>
 
 <p>
 	Give a huge thanks to scottosx who added a large portion of the new
@@ -15,6 +20,14 @@
 		href="https://github.com/grim3212/Grim-Pack/issues">https://github.com/grim3212/Grim-Pack/issues</a>.
 	There is also some things that are still being worked on and will be added before the full release.
 </p>
+
+<h2>Changes in 4.0.0.0 Beta</h2>
+<ul>
+	<li>Update to 1.11.2</li>
+	<li>Finalize enhancements to slingshots and pellet bags</li>
+	<li>Make Modern Furnace able to use vanilla fuel sources as well</li>
+	<li>Add in some new OreDictionary entries</li>
+</ul>
 
 <h2>Changes in 4.0.0.0 Alpha 2</h2>
 <ul>
