Start finalizing changelog for a full release

--- a/changelog.html
+++ b/changelog.html
@@ -1,27 +1,43 @@
-<h1>Version: 4.0.0.0 Beta</h1>
+<h1>Current: 4.0.0.0</h1>
 <h2 style="color: #0000FF">Update to 1.11.2</h2>
 
 <h3>Requirements</h3>
 <ul>
 	<li>Minecraft 1.11.2</li>
-	<li>Minecraft Forge 13.20.0.2201</li>
-	<li>(Optional) JEI 4.2.2.215</li>
-	<li>(Optional) JER 0.6.2.104</li>
+	<li>Minecraft Forge 13.20.0.2230+</li>
+	<li>(Optional) JEI 4.2.7.241+</li>
+	<li>(Optional) JER 0.6.2.104+</li>
+</ul>
+<p>
+	Many things are still work in progress but it should be stable now.
+	There are probably more things missing below but a lot of things have changed.
+	There may be things missing below but all information will end up being updated and changed at the current site <a href="https://grim3212.github.io/grim-pack/">https://grim3212.github.io/grim-pack/</a>.
+	This site is also a work in progress.
+</p>
+
+<h3>Changes</h3>
+<ul>
+	<li>Tweak spawn rates of most world generated blocks and structures</li>
+	<li>Remove black diamond crafting recipe</li>
+	<li>Add in double door abilities to trap door and fence gate</li>
+	<li>Add in colorizer trap door</li>
+	<li>JEI support for Backpack and Pellet Bag recipes</li>
+	<li>Change update url for version json</li>
+	<li>Fix grill GUI's</li>
+	<li>Fix replacing milk bucket recipes causing issues</li>
+	<li>More documentation and localizing</li>
+	<li>New sling shot pellets and pellet bags</li>
+	<li>Add in a few blocks from We(raft. (Arrow Sensor, Metal Mesh, Sensor)</li>
+	<li>Colorizer walls are now like vanilla walls and change colorizer fence gate to accomodate</li>
+	<li>Add in colorizer pillar block</li>
+	<li>More placement options to existing colorizer blocks</li>
 </ul>
 
-<p>
-	Getting close to an official release. I will need to start writing up a complete changelog as well as 
-	add the new information to the instruction manual.
-</p>
+<br>
+<hr>
+<br>
 
-<p>
-	Give a huge thanks to scottosx who added a large portion of the new
-	features. Also, I have done minimal testing so far so report any bugs at <a
-		href="https://github.com/grim3212/Grim-Pack/issues">https://github.com/grim3212/Grim-Pack/issues</a>.
-	There is also some things that are still being worked on and will be added before the full release.
-</p>
-
-<h2>Changes in 4.0.0.0 Beta</h2>
+<h2>4.0.0.0-Beta</h2>
 <ul>
 	<li>Update to 1.11.2</li>
 	<li>Finalize enhancements to slingshots and pellet bags</li>
@@ -29,19 +45,19 @@
 	<li>Add in some new OreDictionary entries</li>
 </ul>
 
-<h2>Changes in 4.0.0.0 Alpha 2</h2>
+<h2>4.0.0.0-Alpha.2</h2>
 <ul>
 	<li>Fix Pokeballs not working at all</li>
 </ul>
 
-<h2>Changes in 4.0.0.0 Alpha 1</h2>
+<h2>4.0.0.0-Alpha.1</h2>
 <ul>
 	<li>Fix Decor Door page</li>
 	<li>Fix Frames and Wallpaper using a hand that was null</li>
 	<li>Fix Machines loading null ItemStacks</li>
 </ul>
 
-<h2>Changes in 4.0.0.0 Alpha</h2>
+<h2>4.0.0.0-Alpha</h2>
 <ul>
 	<li>Add in new Decor Door that can be colorized</li>
 	<li>Add in colorizer light that works the same as the default
@@ -71,17 +87,4 @@
 	<li>Add more information to extruder GUI</li>
 	<li>Add in the start of Fungus changes</li>
 	<li>Add in Floating Island world type</li>
-</ul>
-
-<h2>Bug fixes for 1.11</h2>
-<ul>
-	<li>Remove some OreDict recipes that included vanilla to stop
-		compatibility issues</li>
-	<li>FlatBedrock was causing crashes in 1.11 so the way it has
-		worked has changed so now it modifies the chunks data directly.</li>
-	<li>BetterBUckets use the correct capability for 1.11.</li>
-	<li>Many ItemStack crash fixes that I didn't catch for the first
-		round of updating.</li>
-	<li>Fix some broken recipes and add some more localizations to
-		Pokeball and Manual.</li>
 </ul>
