Fix crash with better buckets. Closes #79

--- a/changelog.html
+++ b/changelog.html
@@ -17,6 +17,7 @@
 
 <h3>Changes</h3>
 <ul>
+	<li>Graves now use one new block instead of chests</li>
 	<li>Tweak spawn rates of most world generated blocks and structures</li>
 	<li>Remove black diamond crafting recipe</li>
 	<li>Add in double door abilities to trap door and fence gate</li>
@@ -31,6 +32,7 @@
 	<li>Colorizer walls are now like vanilla walls and change colorizer fence gate to accomodate</li>
 	<li>Add in colorizer pillar block</li>
 	<li>More placement options to existing colorizer blocks</li>
+	<li>Fix crash with Better Buckets</li>
 </ul>
 
 <br>
