Fix and tweak fungus

--- a/changelog.html
+++ b/changelog.html
@@ -18,6 +18,9 @@
 <h3>Changes</h3>
 <ul>
 	<li>Graves now use one new block instead of chests</li>
+	<li>More ore dictionary matches to use with Cuisine</li>
+	<li>Refinery has custom recipe support similar to grills</li>
+	<li>Fix broken fungus and tweak ore fungus</li>
 	<li>Tweak spawn rates of most world generated blocks and structures</li>
 	<li>Remove black diamond crafting recipe</li>
 	<li>Add in double door abilities to trap door and fence gate</li>
