--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,4 @@
-<h1>Current: 4.0.0.0</h1>
-<h2 style="color: #0000FF">Update to 1.11.2</h2>
+<h1>Current: 4.0.0.2</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -17,6 +16,8 @@
 
 <h3>Changes</h3>
 <ul>
+	<li>Fix compatibility with my tool materials</li>
+	<li>Fix backpack and pellet bag recipes sometimes not working</li>
 	<li>Graves now use one new block instead of chests</li>
 	<li>More ore dictionary matches to use with Cuisine</li>
 	<li>Refinery has custom recipe support similar to grills</li>
