--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.0.2</h1>
+<h1>Current: 4.0.0.4</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -16,6 +16,8 @@
 
 <h3>Changes</h3>
 <ul>
+	<li>Update Pillar's bounding box</li>
+	<li>Fix multitool's having 0 durability</li>
 	<li>Fix compatibility with my tool materials</li>
 	<li>Fix backpack and pellet bag recipes sometimes not working</li>
 	<li>Graves now use one new block instead of chests</li>
