--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.0.10</h1>
+<h1>Current: 4.0.0.12</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -25,7 +25,13 @@ So, if you want all stairs you can 'oredict:stairWood'. You may want to ignore s
 	This site is also a work in progress.
 </p>
 
-<h3>Changes</h3>
+<h3>Changes 4.0.0.12</h3>
+<ul>
+	<li>Add in achievements throughout the different parts.</li>
+	<li>Fix positioning on the Mining wand (It was going up 1 block)</li>
+	
+</ul>
+<h3>Changes 4.0.0.10</h3>
 <ul>
 	<li>All configurable lists should now support metadata and possible OreDict tags so it matches any oredictionary item.</li>
 	<li>Add in more default entries for magic wands and for the workbench upgrade list</li>
@@ -33,6 +39,10 @@ So, if you want all stairs you can 'oredict:stairWood'. You may want to ignore s
 	<li>Fix page links not working sometimes</li>
 	<li>Update held item models to actually be handheld</li>
 	<li>Fix compatibility with lumberjack</li>
+	
+</ul>	
+<h3>Changes 4.0.0.4</h3>
+<ul>
 	<li>Update Pillar's bounding box</li>
 	<li>Fix multitool's having 0 durability</li>
 	<li>Fix compatibility with my tool materials</li>
