--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.0.12</h1>
+<h1>Current: 4.0.0.13</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -24,7 +24,11 @@ So, if you want all stairs you can 'oredict:stairWood'. You may want to ignore s
 	There may be things missing below but all information will end up being updated and changed at the current site <a href="https://grim3212.github.io/grim-pack/">https://grim3212.github.io/grim-pack/</a>.
 	This site is also a work in progress.
 </p>
-
+<h3>Changes 4.0.0.13</h3>
+<ul>
+	<li>Fix conflicting achievements. This will remove any achievement progress you have, just for GrimPack.</li>
+	
+</ul>
 <h3>Changes 4.0.0.12</h3>
 <ul>
 	<li>Add in achievements throughout the different parts.</li>
