--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.0.13</h1>
+<h1>Current: 4.0.1.14</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -7,6 +7,12 @@
 	<li>(Optional) JEI 4.2.7.241+</li>
 	<li>(Optional) JER 0.6.2.104+</li>
 </ul>
+<h3>Changes 4.0.1.14</h3>
+<ul>
+	<li>Add in MoreStorage. This includes, crates, safes, cabinets, lockers, item towers, and locking these storage options.</li>
+	<li>Add in conveyor belt and drill the last things from We(raft.</li>
+</ul>
+
 <p>
 Configuration lists (magic wands, grill recipes, workbench list). Have now been updated.
 They now support OreDictionary by using 'oredict:name'. They now also support metadata by appending an extra colon and number to the end. You can alsu use a '?' to indicate any meta.
