--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.1.14</h1>
+<h1>Current: 4.0.1.17</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -7,6 +7,14 @@
 	<li>(Optional) JEI 4.2.7.241+</li>
 	<li>(Optional) JER 0.6.2.104+</li>
 </ul>
+<h3>Changes 4.0.1.17</h3>
+<img src="http://i.imgur.com/oiqrWcM.png" />
+<ul>
+	<li>Add in Parabuzzy's and Bob-omb's from 8-Bit mobs..</li>
+	<li>Fix enchantment options for MultiTools.</li>
+	<li>Add in a basic fluid tank.</li>
+</ul>
+
 <h3>Changes 4.0.1.14</h3>
 <ul>
 	<li>Add in MoreStorage. This includes, crates, safes, cabinets, lockers, item towers, and locking these storage options.</li>
