--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,23 @@
-<h1>Current: 4.0.1.17</h1>
+<h1>Current: 5.0.0.0</h1>
 
 <h3>Requirements</h3>
 <ul>
-	<li>Minecraft 1.11.2</li>
-	<li>Minecraft Forge 13.20.0.2230+</li>
-	<li>(Optional) JEI 4.2.7.241+</li>
-	<li>(Optional) JER 0.6.2.104+</li>
+	<li>Minecraft 1.12</li>
+	<li>Minecraft Forge 14.21.1.2400+</li>
+	<li>(Optional) JEI 4.7.1.69+</li>
+	<li>(Optional) JER 0.8.1.14+</li>
 </ul>
+<h3>Changes 5.0.0.0</h3>
+<ul>
+	<li>Update for 1.12.</li>
+	<li>All except for Backpack and Pellet Bag recipes are configurable.</li>
+	<li>Try to fix cascading world gen. Should hopefully be gone except for large cacti fields.</li>
+	<li>Fix Ultimate Fist durability config option.</li>
+	<li>Fix Boomerang's not able to return to offhand and deleting current items in main inventory.</li>
+	<li>Lots of fixes to get it 1.12 ready.</li>
+	<li> Achievements have been removed for the time being and should come back later as advancements.</li>
+</ul>
+
 <h3>Changes 4.0.1.17</h3>
 <img src="http://i.imgur.com/oiqrWcM.png" />
 <ul>
