Fix for OreDictionary replacing. Oops

--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.0.0.0</h1>
+<h1>Current: 5.0.0.1</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -7,10 +7,11 @@
 	<li>(Optional) JEI 4.7.1.69+</li>
 	<li>(Optional) JER 0.8.1.14+</li>
 </ul>
-<h3>Changes 5.0.0.0</h3>
+<h3>Changes 5.0.0.1</h3>
 <ul>
 	<li>Update for 1.12.</li>
 	<li>All except for Backpack and Pellet Bag recipes are configurable.</li>
+	<li>Fix OreDictionary replacing.</li>
 	<li>Try to fix cascading world gen. Should hopefully be gone except for large cacti fields.</li>
 	<li>Fix Ultimate Fist durability config option.</li>
 	<li>Fix Boomerang's not able to return to offhand and deleting current items in main inventory.</li>
