--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 4.0.1.17</h1>
+<h1>Current: 4.0.1.20</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -7,6 +7,13 @@
 	<li>(Optional) JEI 4.2.7.241+</li>
 	<li>(Optional) JER 0.6.2.104+</li>
 </ul>
+
+<h3>Changes 4.0.1.20</h3>
+<ul>
+	<li>Fix slingshot crash.</li>
+	<li>Fix boomerangs and ultimate fist problems.</li>
+</ul>
+
 <h3>Changes 4.0.1.17</h3>
 <img src="http://i.imgur.com/oiqrWcM.png" />
 <ul>
