--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.1.1.27</h1>
+<h1>Current: 5.1.2.35</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -6,6 +6,18 @@
 	<li>Minecraft Forge 14.22.0.2456+</li>
 	<li>(Optional) JEI 4.7.5.88+</li>
 	<li>(Optional) JER 0.8.3.23+</li>
+</ul>
+
+<h2>Changes 5.1.2.35</h2>
+<ul>
+	<li>Fully implement the half implemented taming of Treasure Chests. Now if tamed they can follow you around and act as a chest.</li>
+	<li>Add in old Grenade Launcher from my mods in 1.4.6.</li>
+	<li>Add in naturally shedding chicken feathers</li>
+	<li>Add in shaped charges which explode downward</li>
+	<li>Add in alarm box to add some cool sounds to your world.</li>
+	<li>Add in Legendary Staves Neptune and Phoenix Staff another old mod I updated in the past. Uses the unused up until now FrozenCapability.</li>
+	<li>Fix when fungus should drop. Now drops full block with a sword, shears, or silk touch.</li>
+	<li>Fix crash when disabling a part with an Armor or Tool material.</li>
 </ul>
 
 <h2>Configurable Update - 5.1.1.27</h2>
