Fix serverside crash. Bump to 5.1.3.43

--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.1.3.42</h1>
+<h1>Current: 5.1.3.43</h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -8,13 +8,14 @@
 	<li>(Optional) JER 0.8.3.23+</li>
 </ul>
 
-<h2>Changes 5.1.3.42</h2>
+<h2>Changes 5.1.3.43</h2>
 <h4>New Site - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h4>
 <ul>
 	<li>New site pulls information straight from the Instruction Manual and supports different versions and langs.</li>
 	<li>Recipe conditions for subparts now check first if the part itself is loaded then if the subpart is loaded.</li>
 	<li>Fix emptying buckets.</li>
 	<li>Fix FlatItemFrame rendering.</li>
+	<li>Fix server-side crash.</li>
 	<li>Fix aluminum manual links.</li>
 	<li>Fix tooltips for powerstaff and slingshot.</li>
 	<li>Fix grabbing oredict names for instruction manual.</li>
