--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,24 @@
-<h1>Current: 5.1.3.43</h1>
+<h1>Current: 5.2.6.45</h1>
 
 <h3>Requirements</h3>
 <ul>
-	<li>Minecraft 1.12 - 1.12.1</li>
-	<li>Minecraft Forge 14.22.0.2456+</li>
-	<li>(Optional) JEI 4.7.5.88+</li>
-	<li>(Optional) JER 0.8.3.23+</li>
+	<li>Minecraft 1.12 - 1.12.2</li>
+	<li>Minecraft Forge 14.23.0.2493+</li>
+	<li>(Optional) JEI 4.7.11.101+</li>
+	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
+
+<h2>Changes 5.2.6.45</h2>
+<h4>New Site - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h4>
+<ul>
+	<li>Update to 1.12.2.</li>
+	<li>Add in AutoTorch.</li>
+	<li>Add in Flip Flop Torches.</li>
+	<li>Add in Glowstone Torches.</li>
+	<li>Add in Neon Signs.</li>
+	<li>Add changelog page to generator.</li>
+</ul>
+
 
 <h2>Changes 5.1.3.43</h2>
 <h4>New Site - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h4>
