--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.2.6.45</h1>
+<h1>Current: 5.2.11.55  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -8,8 +8,21 @@
 	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
 
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.55</a></h2>
+<ul>
+	<li>Add in <a href="https://grim3212.com/grim-pack/tools/chicken_suit">Chicken Suit</a>.</li>
+	<li>Add in <a href="https://grim3212.com/grim-pack/decor/deco">Fluro Tubes</a>.</li>
+	<li>Add in <a href="https://grim3212.com/grim-pack/tools/detonators">Detonators</a>.</li>
+	<li>Add in <a href="https://grim3212.com/grim-pack/industry/bridges">Bridges</a>.</li>
+	<li>Add in <a href="https://grim3212.com/grim-pack/world/ruins">Structures</a>.</li>
+	<li>Log start time to console</li>
+	<li>Fix cascading chunk errors</li>
+	<li>Fix pruner crash</li>
+	<li>Fix grave text</li>
+	<li>Fix lists in PageItemStack</li>
+</ul>
+
 <h2>Changes 5.2.6.45</h2>
-<h4>New Site - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h4>
 <ul>
 	<li>Update to 1.12.2.</li>
 	<li>Add in AutoTorch.</li>
@@ -21,7 +34,6 @@
 
 
 <h2>Changes 5.1.3.43</h2>
-<h4>New Site - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h4>
 <ul>
 	<li>New site pulls information straight from the Instruction Manual and supports different versions and langs.</li>
 	<li>Recipe conditions for subparts now check first if the part itself is loaded then if the subpart is loaded.</li>
