--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.2.11.55  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 5.2.11.57  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements</h3>
 <ul>
@@ -8,7 +8,7 @@
 	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
 
-<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.55</a></h2>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.57</a></h2>
 <ul>
 	<li>Add in <a href="https://grim3212.com/grim-pack/tools/chicken_suit">Chicken Suit</a>.</li>
 	<li>Add in <a href="https://grim3212.com/grim-pack/decor/deco">Fluro Tubes</a>.</li>
@@ -16,10 +16,12 @@
 	<li>Add in <a href="https://grim3212.com/grim-pack/industry/bridges">Bridges</a>.</li>
 	<li>Add in <a href="https://grim3212.com/grim-pack/world/ruins">Structures</a>.</li>
 	<li>Log start time to console</li>
+	<li>Change Corner UV's to look better</li>
 	<li>Fix cascading chunk errors</li>
 	<li>Fix pruner crash</li>
 	<li>Fix grave text</li>
 	<li>Fix lists in PageItemStack</li>
+	<li>Fix server crash with detonators</li>
 </ul>
 
 <h2>Changes 5.2.6.45</h2>
