--- a/changelog.html
+++ b/changelog.html
@@ -1,11 +1,20 @@
-<h1>Current: 5.2.11.57  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 5.2.11.62  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
-<h3>Requirements</h3>
+<h3>Requirements / Built With</h3>
 <ul>
 	<li>Minecraft 1.12 - 1.12.2</li>
-	<li>Minecraft Forge 14.23.0.2493+</li>
+	<li>Minecraft Forge 14.23.0.2515+</li>
 	<li>(Optional) JEI 4.7.11.101+</li>
 	<li>(Optional) JER 0.8.5.26+</li>
+</ul>
+
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.62</a></h2>
+<ul>
+	<li>Add in Rune Info page.</li>
+	<li>Add in Cage info about Pokeballs</li>
+	<li>Fix Neptune Staff crash</li>
+	<li>Fix Arrow Sensor crash</li>
+	<li>Update local Forge version to 14.23.0.2515</li>
 </ul>
 
 <h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.57</a></h2>
