--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.2.11.66  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 5.2.11.67  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements / Built With</h3>
 <ul>
@@ -8,12 +8,13 @@
 	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
 
-<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.66</a></h2>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.67</a></h2>
 <ul>
 	<li>Fix RWays staying around when disabled.</li>
 	<li>Fix crash that would occur with graves and shaders. (Only tested with SEUS).</li>
 	<li>Fix crash with Milk Buckets when mods tried to fill with a fluid other than milk</li>
 	<li>Change conveyor belts to be their own subpart as intended.</li>
+	<li>Change Cheese block model (stohun01)</li>
 	<li>Update local Forge version to 14.23.0.2537</li>
 </ul>
 
