--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,22 @@
-<h1>Current: 5.2.11.68  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 5.2.12.73  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements / Built With</h3>
 <ul>
 	<li>Minecraft 1.12 - 1.12.2</li>
-	<li>Minecraft Forge 14.23.0.2537+</li>
+	<li>Minecraft Forge 14.23.1.2562+</li>
 	<li>(Optional) JEI 4.7.11.101+</li>
 	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.12.73</a></h2>
+<ul>
+	<li>Add in a basic chunk loader</li>
+	<li>Add information to crash report that tells me what is enabled/disabled</li>
+	<li>Disable Infinite Lava, AutoItemReplacer, and Debug subparts by default. (I thought it was like this already)</li>
+	<li>Fix crash on ruin page if fungus was disabled</li>
+	<li>Fix mcmod.info url to point to the right place</li>
+	<li>Update local Forge version to 14.23.1.2562</li>
+</ul>
+
 
 <h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.11.68</a></h2>
 <ul>
