--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 5.2.12.73  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 5.2.12.77  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements / Built With</h3>
 <ul>
@@ -7,8 +7,12 @@
 	<li>(Optional) JEI 4.7.11.101+</li>
 	<li>(Optional) JER 0.8.5.26+</li>
 </ul>
-<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.12.73</a></h2>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.12.77</a></h2>
 <ul>
+	<li>Fix filling and draining non bucket volume amounts with the buckets.</li>
+	<li>Also fix returning broken stacks when draining buckets.</li>
+	<li>Attempt to fix Pokeball's dissappearing randomly. Needs to be tested!</li>
+	<li>Attempt to fix backpacks and pellet bags very rarely crashing. Hard to test so not sure if it is fixed!</li>
 	<li>Add in a basic chunk loader</li>
 	<li>Add information to crash report that tells me what is enabled/disabled</li>
 	<li>Disable Infinite Lava, AutoItemReplacer, and Debug subparts by default. (I thought it was like this already)</li>
